Modificaciones en Makefile para vincular con la librería GSL. Comienzos en el código para iniciar el sistema. Aún no se intentó compilar.

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ CFLAGS:=-std=c99 -O3 -Wall -finput-charset=UTF-8
 CFLAGS_DBG:=-std=c99 -D_DEBUG -O0 -Wall -ggdb -finput-charset=UTF-8
 
 # Sería genial que nos dejaran usar la GSL...
-LIBS:=-lm
+LIBS:=-lm -lgsl -lgslcblas
 HEADERS:=$(wildcard *.h)
 
 .PHONY: clean
