Se agregó la función de inicialización del sistema (ver comentarios en los archivos). Se agregaron también dos funciones auxiliares, para guardar y leer (en y desde archivos) estados del sistema. Por ahora, `init.h' define los tipos `partícula' y `sistema'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,25 @@
+# ..: Backup y escondidos ::.
+
 *.*~
 *~
-
 .*
 !.gitignore
+
+# .:: Familias ::.
+
+*.html
+*.txt
+*.bin
+*.png
+*.jpg
+*.dat 
+
+# .:: Targets ::.
+
+molecular
+molecular_dbg
+
+# .:: Directorios ::.
 
 src/*.o
 datos/
