Cambios en Makefile para permitir compilar el programa de prueba pruebas.c.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,34 +13,45 @@ CC:=gcc
 TARGET:=molecular
 TARGET_DBG:=$(addsuffix _dbg,$(TARGET))
 
+TARGET_PRUEBAS:=pruebas
+TARGET_PRUEBAS_DBG:=$(addsuffix _dbg,$(TARGET_PRUEBAS))
+
 OBJS:=$(patsubst %.c,%.o,$(wildcard *.c))
 OBJS_DBG:=$(patsubst %.c,%_dbg.o,$(wildcard *.c))
 
 CFLAGS:=-std=c99 -I=/usr/include/gsl -O3 -Wall -finput-charset=UTF-8
 CFLAGS_DBG:=-std=c99 -I=/usr/include/gsl -D_DEBUG -O0 -Wall -ggdb -finput-charset=UTF-8
 
-# Sería genial que nos dejaran usar la GSL...
 LIBS:=-lm -lgsl -lgslcblas
 HEADERS:=$(wildcard *.h)
 
+# Agregar otra receta si se añade otro archivo de pruebas con un main() definido.
+
 .PHONY: clean
 
-all: $(TARGET) $(TARGET_DBG)
+all: $(TARGET) $(TARGET_DBG) $(TARGET_PRUEBAS) $(TARGET_PRUEBAS_DBG)
 
-# Optimizada.
-$(TARGET): $(OBJS)
+# Targets.
+$(TARGET): $(filter-out pruebas.o, $(OBJS))
 	$(CC) $^ $(LIBS) -o $@
 
+$(TARGET_DBG): $(filter-out pruebas_dbg.o, $(OBJS_DBG))
+	$(CC) $^ $(LIBS) -o $@
+
+$(TARGET_PRUEBAS): $(filter-out main.o, $(OBJS))
+	$(CC) $^ $(LIBS) -o $@
+
+$(TARGET_PRUEBAS_DBG): $(filter-out main_dbg.o, $(OBJS_DBG))
+	$(CC) $^ $(LIBS) -o $@
+
+# Optimizada.
 $(OBJS): %.o : %.c $(HEADERS)
 	$(CC) -c $(CFLAGS) $< -o $@
 
 # Debug.
-$(TARGET_DBG): $(OBJS_DBG)
-	$(CC) $^ $(LIBS) -o $@
-
 $(OBJS_DBG): %_dbg.o : %.c $(HEADERS)
 	$(CC) -c $(CFLAGS_DBG) $< -o $@
 
 # Clean
 clean:
-	rm -f $(TARGET) $(TARGET_DBG) $(OBJS) $(OBJS_DBG) *~ *.*~
+	rm -f $(TARGET_PRUEBAS) $(TARGET_PRUEBAS_DBG) $(TARGET) $(TARGET_DBG) $(OBJS) $(OBJS_DBG) *~ *.*~
